2002-09-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_find_version): Helper
	(sp_text_build): Build tspans etc. if 0.0 < version < 0.25

	* src/sp-ellipse.c (sp_arc_find_version): Helper
	(sp_arc_build): Per-version attributes
	(sp_arc_read_attr): Ditto

	* src/document.c (sp_document_new): Delay namespaces etc. to determine version
	(sp_document_new_from_mem): Ditto

	* src/document.h: Bring some members here

2002-09-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/stroke-style.c (sp_stroke_style_line_update): Make insensitive, if not stroked

	* src/sp-rect.c (sp_rect_write_transform): Adjust stroke width, if scale changes

	* src/sp-text.c: Port to SPSVGUnits

	* src/sp-root.c: Port to SPSVGLength, use pixels as basic units from now on

	* src/sp-rect.c: Port to SPSVGLength

	* src/sp-image.c: Port to SPSVGLength

	* src/sp-gradient.c: Port to SPSVGLength

	* src/sp-ellipse.c: Port to SPSVGLength

	* src/file.c (sp_do_file_print_to_printer): Fix px/pt ratio
	(sp_do_file_print_preview): Ditto

	* src/document.c (sp_document_width): Fix px/pt ratio
	(sp_document_height): Ditto
	(sp_document_new): Add sodipodi:version
	(sp_document_new_from_mem): Ditto

	* src/desktop.c (sp_desktop_init): Fix px/pt ratio in doc2dt matrix

	* src/svg/svg-length.c (sp_svg_length_read): New method
	(sp_svg_length_read_lff): Ditto
	(sp_svg_length_unset): Ditto

	* src/svg/svg-types.h: New file

	* src/dialogs/Makefile.am (libspdialogs_a_SOURCES): Added tool-options.[c,h]

2002-08-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_set_shape): Do layouting here, so we can handle blocks

	* src/dialogs/text-edit.c (sp_text_edit_dialog): Layout radiobuttons
	(sp_text_edit_dialog_apply): Do layout
	(sp_text_edit_dialog_read_selection): Ditto

	* src/sp-text.c (sp_font_get_glyph_bbox): New helper
	(sp_font_get_glyph_advance): Ditto
	(sp_font_get_glyph_bbox_lr2tb): Ditto