@@ -1,5 +1,9 @@
 2002-09-03  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/sp-text.c (sp_text_set_shape): Oooooooops, use MAX for bbox other corner
+
+	* src/document.c (sp_document_new): Set docname attribute after build
+
 	* src/sp-text.c (sp_text_find_version): Helper
 	(sp_text_build): Build tspans etc. if 0.0 < version < 0.25
 
